syntax = "proto3";

option go_package = "github.com/s77rt/rdpcloud/proto/go/services/secauthn";

package services.secauthn;

import "models/secauthn/user.proto";

message LogonUserRequest { models.secauthn.User user = 1; }
message LogonUserResponse { string token = 1; }
